<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WorkoutCategoryActivity"
        android:weightSum="12">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <ImageButton
                android:id="@+id/btnWeightTraining"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/weight_training3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_training"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="34sp"
                android:textStyle="bold"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <ImageButton
                android:id="@+id/btnCrossFit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/crossfit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crossfit"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="34sp"
                android:textStyle="bold"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <ImageButton
                android:id="@+id/btnFunctionalCrossTraining"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/functional_training" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/functional_cross_training"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="34sp"
                android:textStyle="bold"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <ImageButton
                android:id="@+id/btnWeightLifting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/weight_lifting" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_lifting"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="34sp"
                android:textStyle="bold"/>

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <ImageButton
                android:id="@+id/btnPowerLifting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/power_lifting" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/power_lifting"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="34sp"
                android:textStyle="bold"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <ImageButton
                android:id="@+id/btnBodyweightWorkouts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bodyweight_training" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bodyweight_workouts"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="34sp"
                android:textStyle="bold"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>