<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/weight_training_resized" />

        <TextView
            android:id="@+id/DetailedWorkoutViewName"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Push day"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" >
        </TextView>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="20sp"
            android:text="@string/category"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DetailedWorkoutViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="Weight Training"
            android:textColor="#000000" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="20sp"
            android:text="@string/description"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DetailedWorkoutViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="On this day we only do push exercises, when we have to use our pushing muscles. Most of the focus is on our chest and triceps plus shoulder."
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textSize="20sp"
        android:text="@string/exercisesInWorkoutDetailedView"
        android:textColor="#000000"
        android:textStyle="bold" />

    <include layout="@layout/content_exercises"></include>




</LinearLayout>